--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ product-test-reports
 .github/test-pt-matrix.yaml
 .github/bin/redshift/.cluster-identifier
 **/dependency-reduced-pom.xml
+
+/etc/
+/plugin-test/
+/logs/
+var/
