--- a/pom.xml
+++ b/pom.xml
@@ -1596,7 +1596,7 @@
             <dependency>
                 <groupId>io.trino.hive</groupId>
                 <artifactId>hive-thrift</artifactId>
-                <version>2</version>
+                <version>2U1</version>
             </dependency>
 
             <dependency>
