[Hdfs] Support schema 'hdfsold'

--- a/pom.xml
+++ b/pom.xml
@@ -1564,7 +1564,7 @@
             <dependency>
                 <groupId>io.trino.hadoop</groupId>
                 <artifactId>hadoop-apache</artifactId>
-                <version>3.3.5-3</version>
+                <version>3.3.5-3U1</version>
             </dependency>
 
             <dependency>
